# scratchy-rust-shuttle-http

./: .gitignore  Cargo.toml  sqlx-data.json
.sqlx/: query-0546f64d84b26dd5d0cab06dedc273402f0abdd4f3358c7085f70767092d4fe2.json  query-1208397e5f15f46944febc2b20dfd8e1bedea6b4702b81e8d134897ebfba0c8b.json  query-8262ea47cf2fc43a58a27609fd04389e4121e7e700b5ad17d8473159e68a71ed.json  query-83b8fbc8a9c54c9538e667a1aa866b6aa479e6f635073b479bed2f6092d2c402.json  query-93e217a3b90336efb00753f19cf309c250d4c1bcd168a6bdfa677b4df8465bff.json  query-9fc83a7e0e931c3811a5ad44c23c852824182b670729747735758c3009f849ab.json  query-a436e6dc058c4e5e9d6c8911cda225ba90e26a848aff9ff92747f562c5c797b5.json  query-a8651f7f3a1d6b1d9b549bdf3cd33c94c5d72d252f43823ccbf609eb4a724eed.json  query-b3ee0e52d742e28e640ace1ff2a82657b9a61d88979f80ef0d31ebea7b1ba9e2.json  query-c58e40eae8a0ca5099c229c75a7f53eda0dbf4dcf14581192798485ca89636f9.json  query-db95f02acdaf9fc0eb5f5c0596b2a9aeec6dfa81fb70135823222fc35c9c6f59.json  query-e920d15d43478752be671d098b552a0e0e68a61918bfaba764824558bc98c994.json
migrations/: 20230516132330_scratch_and_discord_accounts.down.sql  20230516132330_scratch_and_discord_accounts.up.sql  20230709130940_oauth_tokens.up.sql  20230711165508_metadata_cache.up.sql
src/: interactions.rs  main.rs  state.rs
src/database/: mod.rs
src/datastore/: mod.rs
src/embeds/: mod.rs  project.rs  user.rs
src/interactions/: context.rs  mod.rs  register.rs
src/linked_roles/: background_updater.rs  client.rs  metadata.rs  mod.rs  model.rs  register.rs  router.rs  token.rs  token_client.rs  (+1 more)
(+30 files in other folders)
