[package]
name = "rust-shuttle-http"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
axum = "0.6.12"
shuttle-axum = "0.13.0"
tokio = "1.27.0"
shuttle-aws-rds = { version = "0.13.0", features = ["postgres"] }
twilight-model = "0.15.1"
ed25519-dalek = "1.0.1"
hyper = "0.14.25"
serde_json = "1.0.95"
