[package]
name = "rust-shuttle-http"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
axum = "0.6.12"
shuttle-axum = "0.13.0"
tokio = "1.27.0"
shuttle-aws-rds = { version = "0.13.0", features = ["postgres"] }
twilight-model = "0.15.1"
ed25519-dalek = "1.0.1"
hyper = "0.14.25"
serde_json = "1.0.95"
shuttle-secrets = "0.13.0"
hex = "0.4.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
twilight-util = { version = "0.15.1", features = ["builder"] }
twilight-http = "0.15.1"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["serde", "parsing"] }
i18n_codegen = { git = "https://github.com/pkb-pmj/i18n_codegen_simpler_api.git" }
